js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib2/l2b.3.kt
inline fun funB() = listOf(fun1()).joinToString()
